--- a/matheus/hmtl/login.html
+++ b/matheus/hmtl/login.html
@@ -11,31 +11,33 @@
     <title>Login</title>
 </head>
 <body>
+    <!--Cabecalho-->
         <header>
             <img src="../img/Sem fundo.png" alt="">
             <nav>
                 <ul>
                     <form action="#" method="post">
-                        <input class="serach" type="text" id="search" name="search" placeholder="Buscar Produtos" required>
-                        <button class="pesquisar" type="submit">Pesquisar</button>
-                    </form>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Todos os Produtos</a></li>
-                    <li><a href="#">Promoções</a></li>
-                    <li><a href="#">Coleções</a></li>
-                    <li><a href="#">Outlet</a></li>
-                    <li><a href="#">Carrinho</a></li>
-                    <li><a href="login.html">Login</a></li>
-                </ul>
+                            <input class="serach" type="text" id="search" name="search" placeholder="Buscar Produtos" required>
+                        </form>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Todos os Produtos</a></li>
+                        <li><a href="#">Promoções</a></li>
+                        <li><a href="#">Coleções</a></li>
+                        <li><a href="#">Outlet</a></li>
+                        <li><a href="#">Carrinho</a></li>
+                        <li><a href="login.html">Login</a></li>
+                    </ul>
             </nav>
         </header>
-    <div class="acesso">
+         <!--Cabecalho-->
+
+    <!-- <div class="acesso">
         <a href="">Inicio</a>
         <span>></span>
         <a href="">Minha Conta</a>
         <span>></span>
         <a href="login.html">Login</a>
-    </div>
+    </div> -->
     <main class="container">
         <section>
                 <h2>Iniciar Sessão</h2>
@@ -50,13 +52,10 @@
                 <button type="submit" name="enviar" value="envio">
                     Acessar
                 </button>
-                <button type="reset" name="cancelar" value="reset">
-                    Cancelar
-                </button>
                 <span>Não possui uma conta?clique aqui <a href="">Cadastro</a></span>
         </section>
     </main>
-
+<!--Rodapé-->
     <footer>
         <ul>
             <li><h3>Departamentos</h3></li>
@@ -67,17 +66,22 @@
             <li>Roupa intima</li>
         </ul>
         <ul>
-            <li><h3>Contatos</h3></li>
-            <li>Whatssap - (00)0000-0000</li>
-            <li>E-mail@ - king.styles@melhorpreco.com.br</li>
-            <li>Endereço - Rua Fulano de Tal nº 000, Bairro Zé da Esquina, ESTADO(SP,RJ,RS), CEP: 000000-000</li>
+            <li><h3>Localização</h3></li>
+            
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.9885846113393!2d-46.77459098502279!3d-23.532912984697013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce50ab7feb4519%3A0x739f0ddb0439cf94!2sDigital%20House%20Brasil!5e0!3m2!1spt-BR!2sbr!4v1661405778616!5m2!1spt-BR!2sbr" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            
         </ul>
         <ul>
             <li><h3>Assistencia</h3></li>
-            <li>suporte Online</li>
+            <li>Suporte Online</li>
             <li>Chat de Atendimento 08:00 as 22:00 hrs</li>
             <li>Contato com Atacado</li>
+            <li>Whatssap - (00)0000-0000</li>
+            <li>E-mail@ - king.styles@melhorpreco.com.br</li>
         </ul>
     </footer>
+    <!--Rodapé-->
 </body>
 </html>
