--- a/matheus/hmtl/cadastro.html
+++ b/matheus/hmtl/cadastro.html
@@ -11,8 +11,8 @@
     <title>Cadastro</title>
 </head>
 <body>
-<!--Cabecalho-->
-<header>
+ <!--Cabecalho-->
+ <header>
     <img src="../img/Sem fundo.png" alt="">
     <nav>
         <ul>
@@ -28,9 +28,9 @@
                 <li class="nav-item"><a href="login.html">Login</a></li>
             </ul>
             <div class="mobile-menu-icon">
-                <button><img class="icon" src="../img/menu_FILL0_wght400_GRAD0_opsz48.png" alt=""></button>
+                <button type="button" onclick="menuShow()"><img class="icon" src="../img/menu_FILL0_wght400_GRAD0_opsz48.svg" alt=""></button>
             </div>
-            <div class="mobile-menu">
+            <div class="mobile-menu open">
                 <Menu>MENU</Menu>
                 <ul>
                     <form action="#" method="post">
@@ -46,6 +46,7 @@
             </div>
     </nav>
 </header>
+<!--Cabecalho-->
 
 
     <main class="container main-mobile">
@@ -96,15 +97,13 @@
                 <label for="">Confrimar-Senha:
                     <input placeholder="Confirm Passowrd" type="passowrd" name="senha">
                 </label>
-                <label class="pcd" for="">Portador de PCD?
-                    <input type="radio" name="pcd" value="Sim"> Sim
-                    <input type="radio" name="pcd" id="pet" value="Não">Não
+                
+                
+                <label for="">Comentário:
+                    <br>
+                    <textarea  placeholder="Digite aqui..." name="descricao" id="comentario" cols="80" rows="10"></textarea>
                 </label>
-                Comentário:
-                <label for="">
-                    <textarea placeholder="Digite aqui..." name="descricao" id="comentario" cols="80" rows="10"></textarea>
-                </label>
-                <button type="submit" name="enviar" value="envio">Enviar</button>
+                <button class="mobile-button" type="submit" name="enviar" value="envio">Enviar</button>
             </form>
         </section>
     </main>
@@ -134,20 +133,25 @@
             <li>Whatssap - (00)0000-0000</li>
             <li>E-mail@ - king.styles@melhorpreco.com.br</li>
         </ul>
+        <div class="mobile-sobre">
+            @DigitalHouse
+        </div>
     </footer>
     <!--Rodapé-->
 
-<script>
-    function menuShow(){
-        let menuMobile = document.querySelector('.mobile-menu');
-        if(menuMobile.classList.contains('open')){
-            menuMobile.classList.remove('open');
-            document.querySelector('.icon').src = "assets/img/menu_FILL0_wght400_GRAD0_opsz48.svg";
-        }else{
-            menuMobile.classList.add('open');
-            document.querySelector('.icon').src = "assets/img/menu_FILL0_wght400_GRAD0_opsz48.svg";
+    <script>
+        function menuShow(){
+            let menuMobile = document.querySelector('.mobile-menu');
+            console.log("MENU");
+            if(menuMobile.classList.contains('open')){
+                menuMobile.classList.remove('open');
+                document.querySelector('.icon').src = "../img/menu_FILL0_wght400_GRAD0_opsz48.svg";
+            }else{
+                menuMobile.classList.add('open');
+                document.querySelector('.icon').src = "../img/menu_FILL0_wght400_GRAD0_opsz48.svg";
+            }
         }
-    }
-</script>
+    </script>
+
 </body>
 </html>
