--- a/matheus/hmtl/home.html
+++ b/matheus/hmtl/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/home.css">
+    <link rel="icon" href="../img/Sem fundo.ico">
     <title>King-Style</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Work+Sans:wght@600&display=swap');
