--- a/matheus/hmtl/home.html
+++ b/matheus/hmtl/home.html
@@ -58,9 +58,23 @@
                 <img id="img" src="../img/banner1.png" alt="banner1">
                 <img id="img" src="../img/banner2.png" alt="banner2">
             <img id="img" src="../img/banner3.png" alt="banner3">
-            <img id="img" src="../img/banner4.png" alt="banner4">
-            
+            <img id="img" src="../img/banner4.png" alt="banner4">     
         </div>
+    </section>
+    <section class="card">
+        <div class="anuncio">
+            <img class="foto-card" src="../img/peçaMASCcard1.jpg" alt="">
+            <button type="button" class="acessar">Leia mais</button>
+        </div>
+        <div class="anuncio">
+            <img class="foto-card" src="../img/peçaFEMcard1.jpg" alt="">
+            <button type="button" class="acessar">Leia mais</button>
+        </div>
+        <div class="anuncio">
+            <img class="foto-card" src="../img/CalçadosCard1.jpg" alt="">
+            <button type="button" class="acessar">Leia mais</button>
+        </div>
+        
     </section>
 </main>
 <!-- Container -->
